.kube/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: bookinfo
  labels:
    app: db
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mysql:8.0.21
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 200m
              memory: 300Mi
          readinessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 3306
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 3306
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 2
            initialDelaySeconds: 20
          volumeMounts:
            - mountPath: /var/lib/mysql 
              name: test-volume
  volumeClaimTemplates:
  - metadata:
      name: test-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
      storageClassName: "longhorn"   
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: bookinfo
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: db
  type: ClusterIP
