.kube/demo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name:  demo-app
  namespace: bookinfo
  labels:
    app:  demo-app
    service:  demo-app
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app:  demo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  demo-app
  namespace: bookinfo
  labels:
    app:  demo-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  demo-app
      version: v1
  template:
    metadata:
      labels:
        app:  demo-app
        version: v1
    spec:
      containers:
      - name: demo-app
        image: registry.sovcombank.group/s-devops/docker.io/istio/app-demo:0.1
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 300m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          runAsUser: 1000
