.kube/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: bookinfo
  labels:
    app: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
      sidecar: exporter-redis
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9121"
        prometheus.io/path: "/metrics"
      labels:
        app: redis
        sidecar: exporter-redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 6379
          readinessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 6379
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 6379
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 2
            initialDelaySeconds: 20
          volumeMounts:
            - mountPath: /usr/local/etc/redis/
              name: redis-conf  
        - name: redis-exporter      
          image: oliver006/redis_exporter:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 9121
              name: metrics
              protocol: TCP
      volumes:
        - name: redis-conf
          configMap:
            name: redis-configmap
            items:
              - key: redis.conf
                path: redis.conf        
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: bookinfo
spec:
  ports:
    - port: 6379
      targetPort: 6379
      name: tcp-redis
  selector:
    app: redis
  type: ClusterIP
