.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: bookinfo
  name: bookinfo
  namespace: bookinfo
spec:
  rules:
  - host: bookinfo-k8s-test.sovcombank.group
    http:
      paths:
      - backend:
          service:
            name: productpage
            port:
              number: 9080
        path: /
        pathType: ImplementationSpecific
